ACS-6379: [HxI LI] S3 Credentials - PART III - fixing e2e run - adding HxI mock using WireMock

--- a/distribution/src/main/resources/docker-compose-origin/.env
+++ b/distribution/src/main/resources/docker-compose-origin/.env
@@ -11,4 +11,5 @@ ACS_NGINX_TAG=@dist.nginx.version@
 ELASTICSEARCH_TAG=@dist.elasticsearch.version@
 SEARCH_ENTERPRISE_TAG=@dist.search.enterprise.version@
 LOCALSTACK_TAG=@dist.localstack.version@
+WIREMOCK_TAG=@dist.wiremock.version@
 HXINSIGHT_CONNECTOR_TAG=@project.version@
