--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -194,15 +194,26 @@ services:
     depends_on:
       - activemq
     environment:
+      JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=*:5007,server=y,suspend=n
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
+      HYLAND_EXPERIENCE_INSIGHT_API_URL_INGEST: http://hxinsight-mock:8080/ingest
+      HYLAND_EXPERIENCE_INSIGHT_API_URL_STORAGE-LOCATION-REQUEST: http://hxinsight-mock:8080/pre-signed-url
+    ports:
+      - "5007:5007"
 
-  localstack:
+  hxinsight-mock:
+    image: wiremock/wiremock:${WIREMOCK_TAG}
+    command: "--verbose"
+    volumes:
+      - ./wiremock/hxinsight:/home/wiremock
+
+  aws-mock:
     image: localstack/localstack:${LOCALSTACK_TAG}
+    environment:
+      SERVICES: s3
+      BUCKET_NAME: hxinsight-bucket-mock
     ports:
       - "4566:4566"
-    environment:
-      SERVICES: sns,sqs,s3
-      BUCKET_NAME: test-hxinsight-bucket
     volumes:
       - './init-aws.sh:/etc/localstack/init/ready.d/init-aws.sh'
 
