ACS-6379: [HxI LI] S3 Credentials - PART III - randomizing S3 object (file) name

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -203,7 +203,7 @@ services:
 
   hxinsight-mock:
     image: wiremock/wiremock:${WIREMOCK_TAG}
-    command: "--verbose"
+    command: "--global-response-templating --verbose"
     volumes:
       - ./wiremock/hxinsight:/home/wiremock
 
