ACS-6473: download pdf content rendition

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -267,6 +267,8 @@ services:
         limits:
           memory: 256m
     command: "--global-response-templating --verbose"
+    ports:
+      - "8001:8080"
     volumes:
       - ./wiremock/hxinsight:/home/wiremock
 
