ACS-6473 Split SFS configuration to just expose host and port.

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -33,5 +33,6 @@ alfresco:
     response:
       queueName: org.alfresco.hxinsight-connector.transform.response
       endpoint: activemq:queue:${alfresco.transform.response.queueName}
-    storage:
-      get_file_endpoint: http://localhost:8099/alfresco/api/-default-/private/sfs/versions/1/file/${headers.fileId}?httpMethod=GET
+    shared-file-store:
+      host: http://localhost
+      port: 8099
