--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -270,9 +270,12 @@ services:
       - activemq
     environment:
       JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,address=*:5007,server=y,suspend=n
+      LOGGING_LEVEL_ORG_ALFRESCO: DEBUG
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
       HYLAND_EXPERIENCE_INSIGHT_API_URL_INGEST: http://hxinsight-mock:8080/ingest
       HYLAND_EXPERIENCE_INSIGHT_API_URL_STORAGE-LOCATION-REQUEST: http://hxinsight-mock:8080/pre-signed-url
+      ALFRESCO_TRANSFORM_SHARED-FILE-STORE_HOST: http://shared-file-store
+      ALFRESCO_TRANSFORM_SHARED-FILE-STORE_PORT: 8099
     ports:
       - "5007:5007"
 
