ACS-6380: [HxI LI] Upload pdf to S3 - PART II - added retry logic to PreSignedUrlRequester

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -22,6 +22,9 @@ alfresco:
         &authPassword=${hyland.experience.insight.api.password}\
         &authenticationPreemptive=true\
         &throwExceptionOnFailure=false"
+      retry:
+        attempts: 3
+        delay: 1000
   ingester:
     messaging:
       in.endpoint: activemq:topic:alfresco.repo.event2
