ACS-6662: Create bulk-ingester project

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>bulk-ingester</module>
         <module>live-ingester</module>
         <module>distribution</module>
     </modules>
