--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,17 @@
             </snapshots>
         </repository>
         <repository>
+            <id>enterprise-releases</id>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <name>Alfresco Enterprise Releases</name>
+            <url>https://artifacts.alfresco.com/nexus/content/repositories/enterprise-releases/</url>
+        </repository>
+        <repository>
             <id>alfresco-internal</id>
             <releases>
                 <enabled>true</enabled>
