--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
             </snapshots>
         </repository>
         <repository>
-            <id>enterprise-releases</id>
+            <id>alfresco-enterprise</id>
             <releases>
                 <enabled>true</enabled>
             </releases>
