ACS-6380: [HxI LI] Upload pdf to S3 - PART III - refactor configuration properties

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -2,18 +2,14 @@ camel:
   springboot.main-run-controller: true
   dataformat.jackson.autoDiscoverObjectMapper: true
 
-hyland:
-  experience:
-    insight:
-      api:
-        username: dummy_user
-        password: dummy_pass
-        url:
-          storage-location-request: http://localhost:8001/pre-signed-url
-          ingest: http://localhost:8001/ingest
+hyland-experience:
+  insight:
+    username: dummy_user
+    password: dummy_pass
+    base-url: http://localhost:8001
 
-alfresco:
-  integration:
+integration:
+  alfresco:
     repository:
       endpoint: activemq:topic:alfresco.repo.event2
     transform:
@@ -22,17 +18,18 @@ alfresco:
         timeout: 20000
       response:
         queue-name: org.alfresco.hxinsight-connector.transform.response
-        endpoint: activemq:queue:${alfresco.integration.transform.response.queue-name}
+        endpoint: activemq:queue:${integration.alfresco.transform.response.queue-name}
       shared-file-store:
         host: http://localhost
         port: 8099
+  hyland-experience:
     storage:
       location:
-        endpoint: "${hyland.experience.insight.api.url.storage-location-request}\
+        endpoint: "${hyland-experience.insight.base-url}/pre-signed-url\
           ?httpMethod=POST\
           &authMethod=Basic\
-          &authUsername=${hyland.experience.insight.api.username}\
-          &authPassword=${hyland.experience.insight.api.password}\
+          &authUsername=${hyland-experience.insight.username}\
+          &authPassword=${hyland-experience.insight.password}\
           &authenticationPreemptive=true\
           &throwExceptionOnFailure=false"
         retry:
@@ -40,4 +37,4 @@ alfresco:
           initialDelay: 500
           delayMultiplier: 2
     ingester:
-      endpoint: ${hyland.experience.insight.api.url.ingest}?httpMethod=POST
+      endpoint: ${hyland-experience.insight.base-url}/ingest?httpMethod=POST
