ACS-6380: [HxI LI] Upload pdf to S3 - add retry logic securing ingest request

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -30,4 +30,4 @@ hyland-experience:
         &authenticationPreemptive=true\
         &throwExceptionOnFailure=false"
   ingester:
-    endpoint: ${hyland-experience.insight.base-url}/ingest?httpMethod=POST
+    endpoint: ${hyland-experience.insight.base-url}/ingest?httpMethod=POST&throwExceptionOnFailure=false
