ACS-6719: Handle bulk-ingester events

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -5,6 +5,8 @@ camel:
 alfresco:
   repository:
     endpoint: activemq:topic:alfresco.repo.event2
+  bulk-ingester:
+    endpoint: activemq:queue:bulk-ingester-events
   transform:
     request:
       endpoint: activemq:queue:acs-repo-transform-request?jmsMessageType=Text
