ACS-6727: Add namespace prefixes to properties [bulk-ingester]

--- a/bulk-ingester/src/main/resources/application.yml
+++ b/bulk-ingester/src/main/resources/application.yml
@@ -15,3 +15,4 @@ alfresco.bulk.ingest:
   repository:
     pageSize: 100
   endpoint: activemq:queue:bulk-ingester-events
+  namespace-prefixes-mapping: classpath:namespace-prefixes.json
