exclude test-file.pdf from filtering

--- a/pom.xml
+++ b/pom.xml
@@ -206,6 +206,9 @@
             <testResource>
                 <directory>src/test/resources</directory>
                 <filtering>true</filtering>
+                <excludes>
+                    <exclude>test-file.pdf</exclude>
+                </excludes>
             </testResource>
         </testResources>
 
