--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,11 +83,11 @@ jobs:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v1.35.2
-      - name: "Build application"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install
       - name: "Dump all Docker containers logs"
         uses: Alfresco/alfresco-build-tools/.github/actions/docker-dump-containers-logs@v1.41.0
-        if: failure() && steps.tests.outcome == 'failure'
+        if: failure()
+      - name: "Build application"
+        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install
 
 
   push_docker_images:
