changing if of dump containers logs again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,8 +87,7 @@ jobs:
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install
       - name: "Dump all Docker containers logs"
         uses: Alfresco/alfresco-build-tools/.github/actions/docker-dump-containers-logs@v1.41.0
-        if: > 
-          failure()
+        if: failure()
 
 
   push_docker_images:
