updated if and adding destination folder for dump containers logs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,9 @@ jobs:
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install
       - name: "Dump all Docker containers logs"
         uses: Alfresco/alfresco-build-tools/.github/actions/docker-dump-containers-logs@v1.41.0
-        if: failure()
+        if: ${{ failure() }}
+        with:
+          dest: logs
 
 
   push_docker_images:
