--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -304,7 +304,7 @@ services:
     ports:
       - "4566:4566"
     volumes:
-      - './init-aws.sh:/etc/localstack/init/ready.d/init-aws.sh'
+      - "./init-aws.sh:/etc/localstack/init/ready.d/init-aws.sh"
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
 
