Don't perform maven filtering on the docker compose volume.

--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,9 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
+                <excludes>
+                  <exclude>docker-compose/volume/**</exclude>
+                </excludes>
             </resource>
         </resources>
         <testResources>
