--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -1,3 +1,18 @@
+spring:
+  security:
+    oauth2:
+      client:
+        registration:
+          hyland-experience-auth:
+            authorization-grant-type: urn:hyland:params:oauth:grant-type:api-credentials
+            client-id: 6f870beb-504a-40cf-b29f-eccb6202b37a
+            client-secret: KuM0MrzEhWfZet3v8uhnLZwKX+IesqmROKjCw7Jze+Y=
+            client-name: ${hyland-experience.authorization.application-name}
+            scope: hxp.integrations
+        provider:
+          hyland-experience-auth:
+            token-uri: https://auth.iam.staging.experience.hyland.com/idp/connect/token
+
 camel:
   springboot.main-run-controller: true
   dataformat.jackson.autoDiscoverObjectMapper: true
@@ -19,17 +34,13 @@ alfresco:
       port: 8099
 hyland-experience:
   insight:
-    username: dummy_user
-    password: dummy_pass
     base-url: http://localhost:8001
+  authorization:
+    application-name: acs-insight-connector
+    service-user: insight-acs
+    environment-key: hxai-9682fb09-7f58-4b1a-aab2-306ad7edbc11
   storage:
     location:
-      endpoint: "${hyland-experience.insight.base-url}/pre-signed-url\
-        ?httpMethod=POST\
-        &authMethod=Basic\
-        &authUsername=${hyland-experience.insight.username}\
-        &authPassword=${hyland-experience.insight.password}\
-        &authenticationPreemptive=true\
-        &throwExceptionOnFailure=false"
+      endpoint: ${hyland-experience.insight.base-url}/pre-signed-url?httpMethod=POST&throwExceptionOnFailure=false
   ingester:
     endpoint: ${hyland-experience.insight.base-url}/ingest?httpMethod=POST&throwExceptionOnFailure=false
