ACS-6649: Authentication for HxI API - tests fix

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -41,6 +41,12 @@ hyland-experience:
     environment-key:
   storage:
     location:
-      endpoint: ${hyland-experience.insight.base-url}/pre-signed-url?httpMethod=POST&throwExceptionOnFailure=false
+      endpoint: "${hyland-experience.insight.base-url}/pre-signed-url\
+        ?httpMethod=POST\
+        &authMethod=Basic\
+        &authUsername=dummy_user\
+        &authPassword=dummy_pass\
+        &authenticationPreemptive=true\
+        &throwExceptionOnFailure=false"
   ingester:
     endpoint: ${hyland-experience.insight.base-url}/ingest?httpMethod=POST&throwExceptionOnFailure=false
