ACS-6649: Authentication for HxI API - PR's suggestions

--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -37,6 +37,8 @@ alfresco:
 hyland-experience:
   insight:
     base-url: http://localhost:8001
+  authentication:
+    refresh-delay-minutes: 55
   authorization:
     application-name: acs-insight-connector
     service-user: insight-acs
